2009-07-30: Ali aliov@xfce.org
	* Fix a typo that prevents from getting the correct 
	critical configuration.
	* Emit a warning and exit normally if failed to register
	DBus names instead of exiting abnormally so the session
	will try to restart us.

2009-07-27: Ali aliov@xfce.org
	* src/xfpm-battery.c don't notify when starting up.
	* src/xfpm-engine.c fix a typo output message.
	* src/xfpm-session.c Add error checking for getting DBus connection.
	* src/xfpm-shutdown.c more verbosity.
	* src/xfpm-main.c don't exit on SIGHUP.
	* src/xfpm-manager.c exits if we fail to get primary name owner
	of org.freedesktop.PowerManagement.
	* libxfpm/xfpm-common.c use xdg-open first to open links.
	* Another patch to the interface file by Josef Havran.
	* Add the possibility to don't show a tray icon bug 5613.

2009-07-24: Ali aliov@xfce.org
	* Better alignement in the interface file, worked by Josef Havran.

2009-07-22: Ali aliov@xfce.org
	* <!-- interface-requires libxfcegui4 4.6 --> in the interface
	file instead, not sure why glade inserts this 
	<requires lib="xfce4" version="2360.6128"/>  instead! since 
	this will not work on gtk+2.12, however the interface file
	passes the Gtk version check, a glade bug? anyway this might
	fix bug 5599.

2009-07-19: Ali aliov@xfce.org
	* Allow compilation without network manager support, since some
	distros doesn't have it (like Slackware).
	* settings/xfpm-settings.c connect to the signals after settings up all
	the widgets this way we don't get property_changed signals for nothing.
	* Register DBus error code only once at startup to avoid a Metadata
	warning error domain.
	* Update README, NEWS.
	
2009-07-15: Ali aliov@xfce.org
	* Provides the following standard DBus methods:
	CanReboot(),CanShutdown(),Reboot(),GetPowerSaveStatus().
	* src/xfpm-error.{c,h} correct errors name for non 
	supported shutdown/hibernate... .
	to NoHardwareSupported+Invalid cookie to Cookie not found.
	* Update TODO.
	* Update the documentation.
