@@ -1,3 +1,7 @@
+2009-07-31: Ali aliov@xfce.org
+	* Get rid of the cairo OSD and use a gtk based one instead
+	as the old one seems to be problematic on some hardware.
+
 2009-07-30: Ali aliov@xfce.org
 	* Fix a typo that prevents from getting the correct 
 	critical configuration.
